--- a/css/donation.css
+++ b/css/donation.css
@@ -1,1 +1,119 @@
+* {
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+	box-sizing: border-box;
+}
+body {
+	font-family: montserrat;
+	background-image: url("bg2.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+nav {
+	background: rgba(28, 0, 128, 0);
+	height: 120px;
+	width: 100%;
+}
 
+label.logo
+{
+	color: white;
+	font-size: 35px;
+	line-height: 80px;
+	padding: 0 100px;
+	font-weight: bold;
+}
+nav ul {
+	float: right;
+	margin-right: 20px;
+}
+nav ul li {
+	display: inline-block;
+	line-height: 80 px;
+	margin: 0 5px;
+}
+nav ul li a {
+	color: white;
+	font-size: 17px;
+	padding: 7px 13px;
+	border-radius: 3px;
+	text-transform: uppercase;
+
+}
+a.active,a:hover {
+
+	text-decoration: underline;
+	text-decoration-color: chartreuse;
+
+}
+
+input[type=text] {
+	width: 50%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	background-color: cadetblue;
+	color: white;
+}
+
+input[type=email] {
+	width: 50%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	background-color: cadetblue;
+	color: white;
+}
+
+input[type=date] {
+	width: 50%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	background-color: cadetblue;
+	color: white;
+}
+
+input[type=submit] {
+	width: 50%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	background-color: green;
+	color: floralwhite;
+	margin: 4px 2px;
+	margin-top: 28px;
+	border: none;
+	text-decoration: none;
+	cursor: pointer;
+	font-size: 1.5rem;
+}
+input[type=number] {
+	width: 50%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	background-color: cadetblue;
+	color: white;
+
+}
+select {
+	width: 50%;
+	padding: 12px 15px;
+	border: none;
+	border-radius: 4px;
+	background-color: cadetblue;
+	color: white;
+}
+
+form{
+	margin-left: 10%;
+	margin-top: 50px;
+	width: 50%;
+}
+
+h{
+	font-family: Monospace;
+}
