--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,9 @@ body,html {
 }
 
 #loader {
-	position: absolute;
+	position: fixed;
+	top: 0;
+	left: 0;
 	height: 100%;
 	width: 100%;
 	background-color: black;
