--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,7 @@ body,html {
 }
 
 #loader {
-	position: fixed;
-	top: 0;
-	left: 0;
+	position: absolute;
 	height: 100%;
 	width: 100%;
 	background-color: black;
@@ -90,6 +88,7 @@ body,html {
 }
 
 #nav {
+	margin-top: 4px;
 	background-color: black;
 	color: white;
 	position: sticky;
