--- a/css/about.css
+++ b/css/about.css
@@ -102,8 +102,9 @@ span {
 	background-color: rgb(20,20,20);
 	color: white;
 }
-
+/*
 #bg{
 	background: url('../img/about-bg.jpg') no repeat;
 	background-size: 100%;
 }
+*/
