--- a/css/about.css
+++ b/css/about.css
@@ -4,16 +4,11 @@
 	scroll-behavior: smooth;
 	box-sizing: border-box;
 }
-
-body{
-	 background-color: rgb(0,0,0);
-}
-
 .heading {
 	width: 90%;
 	margin: 20px auto;
 	text-align: center;
-	color: rgb(255,255,255);
+	color: rgb(0,0,0);
 	font-size: 1.8rem;
 }
 
@@ -51,8 +46,8 @@ body{
 }
 
 hr {
-	border-color: white;
-	background-color: white;
+	border-color: black;
+	background-color: black;
 	width: 90%;
 	margin: auto;
 	margin-bottom: 3px;
@@ -96,15 +91,20 @@ span {
 
 .info {
 	padding: 10px;
+	font-weight: bold;
 }
 
 #our-team,#what-we-do,#why-we-do{
-	background-color: rgb(20,20,20);
-	color: white;
+	background-color: rgba(164,164,164,0.65);
+	color: black;
 }
-/*
+
 #bg{
-	background: url('../img/about-bg.jpg') no repeat;
-	background-size: 100%;
+	background: url('../img/about-bg.jpg') no-repeat center center/cover;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
-*/
