--- a/css/donation.css
+++ b/css/donation.css
@@ -45,7 +45,7 @@ nav ul li a {
 a.active,a:hover {
 
 	text-decoration: underline;
-	text-decoration-color: chartreuse;
+	text-decoration-color: green;
 
 }
 
@@ -54,8 +54,10 @@ input[type=text] {
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
-	background-color: cadetblue;
-	color: white;
+	border: 0.1px solid darkgreen;
+	background-color: rgb(214,245,165);
+	color: black;
+	
 }
 
 input[type=email] {
@@ -63,8 +65,9 @@ input[type=email] {
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
-	background-color: cadetblue;
-	color: white;
+	border: 0.1px solid darkgreen;
+	background-color:rgb(214, 245, 165) ;
+	color: black;
 }
 
 input[type=date] {
@@ -72,8 +75,9 @@ input[type=date] {
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
-	background-color: cadetblue;
-	color: white;
+	border: 0.1px solid darkgreen;
+	background-color: rgb(214, 245, 165);
+	color: black;
 }
 
 input[type=submit] {
@@ -81,7 +85,7 @@ input[type=submit] {
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
-	background-color: green;
+	background-color:  rgb(30, 136, 21) ;
 	color: floralwhite;
 	margin: 4px 2px;
 	margin-top: 28px;
@@ -95,8 +99,9 @@ input[type=number] {
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
-	background-color: cadetblue;
-	color: white;
+	border: 0.1px solid darkgreen;
+	background-color: rgb(214, 245, 165);
+	color: black;
 
 }
 select {
@@ -104,8 +109,9 @@ select {
 	padding: 12px 15px;
 	border: none;
 	border-radius: 4px;
-	background-color: cadetblue;
-	color: white;
+	border: 0.1px solid darkgreen;
+	background-color: rgb(214, 245, 165);
+	color: black;
 }
 
 form{
@@ -117,3 +123,4 @@ form{
 h{
 	font-family: Monospace;
 }
+
