--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,11 @@ body,html {
 }
 
 #loader {
-	position: absolute;
+	position: fixed;
 	height: 100%;
 	width: 100%;
+	top: 0;
+	left: 0;
 	background-color: black;
 	display: flex;
 	justify-content: center;
@@ -85,20 +87,27 @@ body,html {
 	color: white;
 	border: 2px solid black;
 	padding: 5px;
+	vertical-align: middle;
+}
+img {
+	vertical-align: middle;
+	width: 90px;
+	height: 90px;
 }
 
 #nav {
-	margin-top: 4px;
 	background-color: black;
 	color: white;
 	position: sticky;
-	top: 1px;
+	top: 0;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	border: 2px solid black;
 	padding: 5px;
 	align-items: center;
+	font-family: Arial;
+	font-size: larger;
 }
 
 .list {
@@ -113,7 +122,7 @@ body,html {
 
 a {
 	text-decoration: none;
-	color: white;
+	color: cyan;
 	margin-right: 10px;
 }
 
@@ -129,12 +138,15 @@ a:hover {
 #search {
 	border: 2px solid black;
 	padding: 4px;
+
 }
 
 #search input {
 	background-color: #cfd0d0;
 	border-color: #a7a7a7;
 	box-shadow: none;
+	width: 150px;
+	height: 25px;
 }
 
 .container {
@@ -174,13 +186,6 @@ a:hover {
 	height: 100%;
 }
 
-#footer {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: black;
-	color: white;
-}
 
 #active {
 	text-decoration: underline;
@@ -217,4 +222,52 @@ button {
 
 .heading {
 	text-align: center;
+}
+
+.footicon {
+	height: 20vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+.footicon a {
+	height: 80px;
+	width: 80px;
+	border-radius: 50%;
+	background-color: #c9d3fc;
+	text-align: center;
+	margin: 15px;
+	line-height: 80px;
+	box-shadow: 1px 4px 2px 2px #dcdde1;
+
+}
+
+.footicon a i {
+	transition: all 0.3s linear;
+}
+.footicon a:hover i {
+	transform: scale(1.4);
+}
+.fa-facebook {
+	color: #3b5998;
+}
+.fa-twitter {
+	color: #00aced;
+}
+.fa-instagram {
+	color: #517fa4;
+}
+.fa-linkedin {
+	color: #007bb6;
+}
+
+details summary{
+	margin-right: 10px;
+	color: cyan;
+}
+
+details summary::-webkit-details-marker {
+	display: none;
 }
