--- a/css/donation.css
+++ b/css/donation.css
@@ -5,6 +5,19 @@
 	box-sizing: border-box;
 	font-weight: bold;
 }
+.background{
+	height: 100vh;
+	width: 100%;
+	
+	top:0;
+	left:0;
+	z-index:-15;
+	background-position: center;
+	background-size: cover;
+	box-sizing: border-box;
+	position: fixed;
+	background-image: url('../img/background.png');
+}
 body {
 	font-family: montserrat;
 	background-image: url("bg2.jpg");
