--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ img {
 #nav {
 	background-color: black;
 	color: white;
-	position:fixed;
+	position:relative;
 	top: 0;
 	width: 100%;
 	display: flex;
